--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <main>
-        <section id="container">
+        <!--<section id="container">
             <article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
@@ -19,31 +19,7 @@
                         <p>O JavaScript é uma linguagem de Programação</p> 
                     </div>           
                 </div>
-            </article>
-
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Programação</h3>
-                    <div class="cartao__conteudo__pergunta">
-                       <p>O que é JavaScript?</p> 
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        <p>O JavaScript é uma linguagem de Programação</p> 
-                    </div>           
-                </div>
-            </article>
-
-            <article class="cartao">
-                <div class="cartao__conteudo">
-                    <h3>Programação</h3>
-                    <div class="cartao__conteudo__pergunta">
-                        <p>O que é JavaScript?</p> 
-                    </div>
-                    <div class="cartao__conteudo__resposta">
-                        <p>O JavaScript é uma linguagem de Programação</p> 
-                    </div>           
-                </div>
-            </article>
+            </article> -->
         </section>
    </main>
    <footer>
