--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
         </section>
    </main>
    <footer>
-    <p>Projeto desenvolvido por Estudante-turma, sem fins lucrativos</p>
+    <p>Projeto desenvolvido por Caroline Voidella Charello-2D, sem fins lucrativos</p>
    </footer> 
+   <script src="app.js"></script>
+   <script src="perguntas.js"></script>
 </body>
 </html>
