--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
    <main>
-        <!--<section id="container">
-            <article class="cartao">
+        <section id="container">
+            <!--<article class="cartao">
                 <div class="cartao__conteudo">
                     <h3>Programação</h3>
                     <div class="cartao__conteudo__pergunta">
@@ -20,7 +20,7 @@
                     </div>           
                 </div>
             </article> -->
-        </section>
+    </section>
    </main>
    <footer>
     <p>Projeto desenvolvido por Caroline Voidella Charello-2D, sem fins lucrativos</p>
